# django_reddit

./: LICENSE  README.md  pyproject.toml  syncdb.sh
django_reddit/: urls.py
django_reddit/settings/: common.py  local.py  production.py
reddit/: urls.py  views.py
templates/public/: comments.html  edit.html  frontpage.html  profile.html
users/: views.py
